--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,26 @@ img:hover {
   transform: scale(1.05);
 }
 
+.column {
+  display: inline-block;
+  width: 30%;
+}
+
+.small {
+  width: 100%;
+  height: 100%
+}
+
+.med {
+  width: 200%;
+  height: 200%
+}
+
+.large {
+  width: 300%;
+  height: 300%
+}
+
 .amiable {
   border: 1px solid #22aa44;
   box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;
